<resources>
    <string name="app_name">CarPooling2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="create_an_account">Đăng ký</string>
    <string name="my_profile">Hồ sơ cá nhân</string>
    <string name="search_trip" translatable="false">Tìm kiếm</string>
    <string name="post_trip">Đăng chuyến đi</string>
    <string name="log_out">Thoát</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="date_start">Ngày khởi hành</string>
    <string name="date_back">Ngày về</string>
    <string name="time_start">Giờ đi</string>
    <string name="time_back">Giờ về</string>
    <string name="sit_left">Chỗ ngồi được bán</string>
    <string name="sit_total">Tổng số chổ ngồi</string>
    <string name="price_per_sit">Giá cho một chỗ ngồi (VND)</string>
    <string name="luggage">Cho phép mang theo hành lí</string>
    <string name="how_to_pay">Cách thức thanh toán</string>
    <string name="orgin">Điểm khởi hành</string>
    <string name="destination">Điểm đến</string>
    <string name="save">Lưu</string>
    <string name="edit">Chỉnh sữa</string>
    <string name="google_map_key">AIzaSyDl-pKM4eqYmQEh0-Za4y48CnI0qgjSc-w</string>
    <string name="motobile">Xe máy</string>
    <string name="car">Xe hơi</string>
    <string name="passenger_car">Xe khách</string>
    <string name="waypoint">Đường đi qua (Tùy chọn)</string>
    <string name="Edit">Chỉnh sữa</string>
    <string name="post">Đăng</string>
    <string name="Save">Lưu</string>
    <string name="upload_profile_picture">Thay đổi ảnh</string>
    <string name="name">Họ tên</string>
    <string name="phone">Số điện thoại di động</string>
    <string name="mail">Địa chỉ email</string>
    <string name="age">Độ tuổi</string>
    <string name="city">Thành phố sinh sống</string>
    <string name="update">Cập nhật</string>
    <string name="password">Mật khẩu</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="register">Đăng kí</string>
    <string name="login">Đăng nhập</string>
    <string name="find">Tìm kiếm</string>
    <string name="verification_instruction">Nhập vào mã code nằm trong tin nhắn mà chúng tôi vừa gửi cho số điện thoại bạn đăng kí</string>
    <string name="verify">Xác thực</string>
    <string name="success_send_sms">Tín nhắn xác thực đã được gửi</string>
    <string name="wait">Xin vui lòng đợi trong giây lát...</string>
    <string name="already_sent">Tin nhắn xác thực đẵ được gửi trước đó, xin vui lòng kiểm tra lại</string>
    <string name="blank_field">Xin vui lòng điền đầy đủ thông tin!</string>
    <string name="wrong_pịn">Mã kích hoạt không đúng, vui lòng sữ dụng mã kích hoạt nằm trong tin nhắn SMS hoặc cuộc gọi vừa nhận được</string>
    <string name="terminate_pin">Mã kích hoạt đã bị hủy, vui lòng đăng ký lại để nhận được mã kích hoạt mới</string>
    <string name="non_exist_pin">Mã kích hoạt cho số điện thoại này không còn tồn tại, vui lòng đăng kí lại để nhận được mã kích hoạt mới</string>
    <string name="invalid_phone">Số điện thoại di động không hợp lệ!</string>
    <string name="invalid_pass">Mật khẩu cần ít nhất 6 kí tự!</string>
    <string name="invalid_confirm_pass">Xác nhận mật khẩu không khớp!</string>
    <string name="unsuccess_create_account">Đăng kí tài khoản không thành công!</string>

    <string name="unsuccess_login">Đăng nhập không thành công!</string>
    <string name="unsuccess_update">Cập nhật không thành công!</string>
    <string name="success_update">Cập nhật thành công!</string>
    <string name="already_have_phone">Số điện thoại này đã được đăng kí trước đó, vui lòng nhập số điện thoại mới</string>
    <string name="history">Nhật ký hoạt động</string>
    <string name="already_register">Số điện thoại bạn đăng ký đã được sử dụng, vui lòng đăng kí với một số điện thoại khác</string>
    <string name="success_delete">Xóa thành công</string>


</resources>
