<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.admin.carpooling2.Post">


    <AutoCompleteTextView
        android:id="@+id/autoCompOrigin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/orgin"
        android:imeOptions="actionNext"
        />

    <AutoCompleteTextView
        android:id="@+id/autoCompDes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/destination"
        android:textSize="18sp"
        android:imeOptions="actionNext"
        />

    <AutoCompleteTextView
        android:id="@+id/autoCompWayPoint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/waypoint"
        android:imeOptions="actionNext"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Phương tiện"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioVehiclegroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioMotobike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/motobile" />

        <RadioButton
            android:id="@+id/radioCar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/car" />

        <RadioButton
            android:id="@+id/radioPassenger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/passenger_car" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/date_start" />

        <EditText
            android:id="@+id/editStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/time_back"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sit_left" />

        <NumberPicker
            android:id="@+id/numberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.19"
            android:elevation="1dp"
            android:orientation="horizontal" />

    </LinearLayout>


    <CheckBox
        android:id="@+id/ckLuggage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:text="@string/luggage" />

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/price_per_sit"
        android:inputType="number" />

    <Button
        android:id="@+id/btnPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post" />

</LinearLayout>
