<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    >


    <EditText
        android:id="@+id/editOrigin"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/orgin"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

    <EditText
        android:id="@+id/editDestination"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/destination"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="60dp" />

    <TextView
        android:id="@+id/textViewVehicleSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="Phương tiện"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="161dp" />


    <RadioGroup
        android:id="@+id/radioVehiclegroupSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="191dp">

        <RadioButton
            android:id="@+id/radioMotobikeSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/motobile" />

        <RadioButton
            android:id="@+id/radioCarSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/car" />

        <RadioButton
            android:id="@+id/radioPassengerSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/passenger_car" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editStartDateSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/date_start"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioVehiclegroupSearch" />

        <EditText
            android:id="@+id/editStartTimeSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/time_start"
            android:inputType="textPersonName"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioVehiclegroupSearch" />

    </LinearLayout>

    <Button
        android:id="@+id/btnFind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find"

        app:layout_constraintHorizontal_bias="0.513"

        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editStartDateSearch" />

</LinearLayout>