<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"

            android:title="@string/search_trip" />
        <item
            android:id="@+id/nav_post"

            android:title="@string/post_trip" />
        <item
            android:id="@+id/nav_profile"

            android:title="@string/my_profile" />



        <!--
      <item
          android:id="@+id/nav_manage"
          android:icon="@drawable/ic_menu_manage"
          android:title="Tools" />
          -->
    </group>
<!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
-->
</menu>
