<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true"

    >

    <FrameLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/default_avatar" />

        <Button
            android:id="@+id/btnUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@drawable/button_corner_normal"

            android:text="@string/upload_profile_picture"
            android:textColor="@android:color/white" />
    </FrameLayout>

    <EditText
        android:id="@+id/editName"
       android:drawableLeft="@drawable/ic_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"

        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editPhone"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/ic_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textColorHint="@color/black" />

    <Spinner
        android:id="@+id/spinnerGender"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/drawable_spinner"
        android:paddingLeft="20dp" />

    <EditText
        android:id="@+id/editAge"
        android:drawablePadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:ems="10"
        android:drawableLeft="@drawable/ic_age"
        android:hint="@string/age"
        android:inputType="number"
        android:textColorHint="@color/black" />


    <EditText
        android:id="@+id/editCity"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/ic_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName"
        android:textColorHint="@color/black" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_corner_normal"
        android:text="@string/update"
        android:textColor="@android:color/white"
        android:textColorHint="@color/black" />

</LinearLayout>